deploy: c30eaee95a74521bee59d21afaff3fe64280e574

--- a/crate_io.html
+++ b/crate_io.html
@@ -3,11 +3,11 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>rdftk_io - RDFtk: An RDF Toolkit for Rust</title>
+        <title>rdftk_io - The RDFtk Book</title>
         
 
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <meta name="description" content="">
+        <meta name="description" content="RDFtk: An RDF Toolkit for Rust">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
@@ -116,7 +116,7 @@
                         
                     </div>
 
-                    <h1 class="menu-title">RDFtk: An RDF Toolkit for Rust</h1>
+                    <h1 class="menu-title">The RDFtk Book</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
