deploy: 7fc2b4b570be374df7c6fa6919889fa9624d70a4

--- a/index.html
+++ b/index.html
@@ -155,6 +155,24 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#introduction" id="introduction">Introduction</a></h1>
+<p>The RDF toolkit for Rust is a set of crates providing the ability to work with RDF data. The goal is to provide a consistent set of tools for reading and writing files, manipulating models programmatically, and working with graph (triple) stores.</p>
+<h2><a class="header" href="#goals" id="goals">Goals</a></h2>
+<ol>
+<li><strong>Usability</strong>
+<ol>
+<li>Avoid lifetimes in public structures</li>
+<li>Consistency</li>
+<li>As Rust-like as possible</li>
+</ol>
+</li>
+<li><strong>Correctness</strong> Sensible standards conformance</li>
+<li><strong>Flexibility</strong></li>
+</ol>
+<h2><a class="header" href="#not-goals" id="not-goals">Not Goals</a></h2>
+<ol>
+<li><strong>Performance</strong>; in terms of implementation, the primary goals of the RDFtk project is to provide a consistent and complete set of crates for handling RDF data. To this end the crates will value readability and usability over runtime optimization (either memory, or speed) at this time. Getting the right interface will be the primary aim with those optimizations coming as necessary.</li>
+<li><strong>Productization</strong></li>
+</ol>
 
                     </main>
 
