deploy: 19643c52ac8669934f8e1b40315bebf28f2c12f6

--- a/intro_primer.html
+++ b/intro_primer.html
@@ -422,6 +422,7 @@ properties.</p>
 </code></pre>
 <h2><a class="header" href="#query" id="query">Query</a></h2>
 <h2><a class="header" href="#extensions" id="extensions">Extensions</a></h2>
+<p>The following are commonly</p>
 <h3><a class="header" href="#quads" id="quads">Quads</a></h3>
 <h3><a class="header" href="#rdf" id="rdf">RDF*</a></h3>
 
