deploy: dc5c7bf5b7479ebfefaa9feb6c1117def53969cf

--- a/intro_primer.html
+++ b/intro_primer.html
@@ -209,6 +209,8 @@ requires two predicates -- see <a href="#vocabulary-descriptions">Vocabulary Des
 </ol>
 <p><a name="fig_1_3"></a><img src="img/primer-nodes.png" alt="Statement Node Types" /></p>
 <div class="caption figure">1.3: Statement Node Types</div>
+<p>The following is a pretty good representation of the complete RDF data model, hopefully most of which will be clear by
+the end of this primer.</p>
 <p><a name="fig_1_3b"></a><img src="img/primer-data-model.png" alt="Complete Data Model" /></p>
 <div class="caption figure">1.3b: Complete Data Model</div>
 <h2><a class="header" href="#an-annotated-example" id="an-annotated-example">An Annotated Example</a></h2>
